<resources>
    <string name="app_name">RickMortyApplication</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Home</string>
    <string name="characters_fragment_label">Characters</string>
    <string name="details_fragment_label">Character Details</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="home_fragment">Home fragment</string>
    <string name="character_fragment">Character fragment</string>
    <string name="characters">characters</string>
    <string name="locations">Locations</string>
    <string name="episodes">Episodes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">image</string>
    <string name="name">Name</string>
    <string name="status">Status</string>
    <string name="species">Species</string>
    <string name="gender">Gender</string>
    <string name="origin">Origin</string>
    <string name="location">Location</string>
    <string name="search_character">Search Character</string>
</resources>