<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin"
    tools:context=".ui.HomeFragment">

    <Button
        android:id="@+id/character"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/locations"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cornerRadius="@dimen/margin"
        android:text="@string/characters"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:backgroundTint="@color/button1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <Button
        android:id="@+id/locations"
        app:layout_constraintTop_toBottomOf="@id/character"
        app:layout_constraintBottom_toTopOf="@id/episodes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cornerRadius="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/locations"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:backgroundTint="@color/button2"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <Button
        android:id="@+id/episodes"
        app:layout_constraintTop_toBottomOf="@id/locations"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cornerRadius="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/episodes"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:backgroundTint="@color/button1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>