<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/margin"
    tools:context=".ui.CharacterDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/character_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image"/>

        <TextView
            android:id="@+id/tv_name"
            app:layout_constraintTop_toBottomOf="@id/character_image"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/medium_font"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/name"/>

        <TextView
            android:id="@+id/character_name"
            app:layout_constraintTop_toBottomOf="@id/character_image"
            app:layout_constraintStart_toEndOf="@id/tv_name"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/medium_font"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_status"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/medium_font"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/status"/>

        <TextView
            android:id="@+id/character_status"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            app:layout_constraintStart_toEndOf="@id/tv_status"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/medium_font"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_species"
            app:layout_constraintTop_toBottomOf="@id/tv_status"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/medium_font"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/species"/>

        <TextView
            android:id="@+id/character_species"
            app:layout_constraintTop_toBottomOf="@id/tv_status"
            app:layout_constraintStart_toEndOf="@id/tv_species"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/medium_font"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_gender"
            app:layout_constraintTop_toBottomOf="@id/tv_species"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/medium_font"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/gender"/>

        <TextView
            android:id="@+id/character_gender"
            app:layout_constraintTop_toBottomOf="@id/tv_species"
            app:layout_constraintStart_toEndOf="@id/tv_gender"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/medium_font"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_origin"
            app:layout_constraintTop_toBottomOf="@id/tv_gender"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/medium_font"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/origin"/>

        <TextView
            android:id="@+id/character_origin"
            app:layout_constraintTop_toBottomOf="@id/tv_gender"
            app:layout_constraintStart_toEndOf="@id/tv_origin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/medium_font"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_location"
            app:layout_constraintTop_toBottomOf="@id/tv_origin"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/medium_font"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/location"/>

        <TextView
            android:id="@+id/character_location"
            app:layout_constraintTop_toBottomOf="@id/tv_origin"
            app:layout_constraintStart_toEndOf="@id/tv_location"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/medium_font"
            android:textColor="@color/black"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>